Customized homepage, added lab 2 and 3

--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Ayline's CST252 Homepage</title>
-	<link rel="stylesheet" type="text/css" href="css/site.css">
-</head>
-<body>
-	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
 
-		<p>Go crazy and customize me.</p>
-	</main>
+	<head>
+		<title>Welcome</title>
+		<link rel="stylesheet" type="text/css" href="css/site.css">
+	</head>
 
+	<body>
+		<div id="content">
+		<h1>Ayline Castrejon</h1>
+		<img src="images/myself.png" alt="myself">
+		<p>My name is Ayline Castrejon and my major is Communication Design with a concentration in Visual Design. This is my first semester as a transfer at CSUMB. I enjoy painting, traveling, watching movies and spending time with family. </p>
+		</div>
 
-</body>
+		<div id="labs">
+		<li><a href="lab2/helloworld.html">Lab 2: First HTML</a></li>
+		<li><a href="lab3/index.html">Lab 3: File Structure</a></li>
+		<li><a href="lab4/">Lab 4: Pseudocoding</a></li>
+		<li><a href="lab5/">Lab 5:</a></li>
+		<li><a href="lab6/">Lab 6:</a></li>
+		</div>
+
+	</body>
 </html>
