--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-</head>
-<body>
+	<head>
+		<title>Lab 3: File Structures</title>
+		<link rel="stylesheet" type="text/css" href="css/lab3.css">
+	</head>
 
-</body>
+	<body>
+		<h1>Lab 3: File Structures</h1>
+		<p>For this lab, we had to create a local file structure and add index.html files.</p>
+
+		<h2>Challenges</h2>
+		<p>This lab was very straightfoward. I had not difficulty creating the file structure.</p>
+
+		<h2>Results</h2>
+		<p>Here is the file structure that I made:</p>
+		<img src="images/lab3screenshot.png">
+
+		<h2>Other Screenshots:</h2>
+
+		<figure>
+			<img src="images/screenshot2.png">
+			<figcaption>This is my html source code in Sublime (Task 2)</figcaption>
+		</figure>
+
+		<figure>
+			<img src="images/screenshot3.png">
+			<figcaption>This is how it appeared in Chrome (Task 2)</figcaption>
+		</figure>
+
+		<figure>
+			<img src="images/screenshot4.png">
+			<figcaption>This is my html source code in Sublime (Task 3)</figcaption>
+		</figure>
+
+		<figure>
+			<img src="images/screenshot5.png">
+			<figcaption>This is how it appeared in Chrome (Task 3)</figcaption>
+		</figure>
+
+	</body>
 </html>
