--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-</head>
-<body>
+	<head>
+		<title>Lab 4:Pseudocoding</title>
+		<link rel="stylesheet" type="text/css" href="css/lab4.css">
+	</head>
 
-</body>
+	<body>
+		<div id="content">
+		<h1>Lab 4: Pseudocoding and Problem-solving</h1>
+		<p>For this lab, the main idea is to get in the habit of pseudocoding before starting to code. We created pseudocode for an everyday task and for a computer task.</p>
+
+		<h2>Challenges</h2>
+		<p>We were able to come up with an everyday task very quickly. Although, we did have trouble coming up with a computer task.</p>
+
+		<h2>Results</h2>
+		<p>Here are the pseudocodes we created:</p>
+
+		<p><em>Making Lemonade:</em></p>
+		<ol>
+			<li>Cut lemons in half</li>
+			<li>Squeeze lemons in a pitcher</li>
+			<li>Add water</li>
+			<li>Add sugar</li>
+			<li>Mix</li>
+			<li>Add ice or refridgerate</li>
+			<li>Pour into cup</li>
+			<li>Sip and enjoy!</li>
+		</ol>
+
+		<p><em>Converting meters to feet:</em></p>
+		<ol>
+			<li>Input meter value (M)</li>
+			<li>Calculate feet(F):</li>
+			<ul><li>Multiply M by 3.2808</li></ul>
+			<li>Output the value of F</li>
+			<li>Stop</li>
+		</ol>
+
+		<p><em>JavaScript code:</em></p>
+		<pre>// Input meter value (M)
+	// Calculate feet(F):
+	// Multiply M by 3.2808
+		// Output the value of F
+			// Stop</pre>
+		</div>
+	</body>
 </html>
