added lab 5 html and css

--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-</head>
-<body>
 
-</body>
+	<head>
+		<title>Lab 5: Data Types and Variables</title>
+		<link rel="stylesheet" type="text/css" href="css/lab5.css">
+	</head>
+
+	<body>
+		<div id="content">
+		<img id="car" src="img/carpic.jpg">
+		<h1>Lab 5: Data Types and Variables</h1>
+		<p>The main idea for this lab is to experiment with basic JavaScript data
+			types and variables.</p>
+
+		<h2>Challenges</h2>
+		<p>The only challenge I had for this lab was getting console.log() confused
+			with document.writeln(). Everything else was very straightfoward and had
+			and	no difficulties.</p>
+
+		<h2>Results</h2>
+		<p>Here is the program execution:</p>
+
+		<div id="output">
+			<h3>Script Output</h3>
+			<script src="js/lab5.js"></script>
+		</div>
+
+		</div>
+	</body>
 </html>
