--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 		<div id="labs">
 		<li><a href="lab2/helloworld.html">Lab 2: First HTML</a></li>
-		<li><a href="lab3/index.html">Lab 3: File Structure</a></li>
-		<li><a href="lab4/">Lab 4: Pseudocoding</a></li>
-		<li><a href="lab5/">Lab 5:</a></li>
+		<li><a href="lab3/index.html">Lab 3: File Structure and File Transfer</a></li>
+		<li><a href="lab4/index.html">Lab 4: Pseudocoding and Problem-solving</a></li>
+		<li><a href="lab5/index.html">Lab 5: Lab 5: Data Types and Variables</a></li>
 		<li><a href="lab6/">Lab 6:</a></li>
 		</div>
 
