updates to lab 4 and 5

--- a/lab5/index.html
+++ b/lab5/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<title>Lab 5: Data Types and Variables</title>
+		<link rel="stylesheet" type="text/css" href="../css/site.css">
 		<link rel="stylesheet" type="text/css" href="css/lab5.css">
 	</head>
 
