updated homepage css and html and lab 4

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="content">
 		<h1>Ayline Castrejon</h1>
-		<img src="images/myself.png" alt="myself">
+		<img id="myself" src="images/myself.png" alt="myself">
 		<p>My name is Ayline Castrejon and my major is Communication Design with a concentration in Visual Design. This is my first semester as a transfer at CSUMB. I enjoy painting, traveling, watching movies and spending time with family. </p>
 		</div>
 
