--- a/lab4/index.html
+++ b/lab4/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Lab 4:Pseudocoding</title>
+		<link rel="stylesheet" type="text/css" href="../css/site.css">
 		<link rel="stylesheet" type="text/css" href="css/lab4.css">
 	</head>
 
