--- a/lab5/index.html
+++ b/lab5/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<div id="content">
-		<img id="car" src="img/carpic.jpg">
+		<img id="carpic" src="img/carpic.jpg">
 		<h1>Lab 5: Data Types and Variables</h1>
 		<p>The main idea for this lab is to experiment with basic JavaScript data
 			types and variables.</p>
