--- a/lab3/index.html
+++ b/lab3/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Lab 3: File Structures</title>
+		<link rel="stylesheet" type="text/css" href="../css/site.css">
 		<link rel="stylesheet" type="text/css" href="css/lab3.css">
 	</head>
 
