--- a/lab3/index.html
+++ b/lab3/index.html
@@ -7,6 +7,7 @@
 	</head>
 
 	<body>
+		<div id="content">
 		<h1>Lab 3: File Structures</h1>
 		<p>For this lab, we had to create a local file structure and add index.html files.</p>
 
@@ -39,5 +40,6 @@
 			<figcaption>This is how it appeared in Chrome (Task 3)</figcaption>
 		</figure>
 
+		</div>
 	</body>
 </html>
