--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-</head>
-<body>
+	<head>
+		<title>Lab 6: Arrays and Objects</title>
+		<link rel="stylesheet" type="text/css" href="../css/site.css">
+		<link rel="stylesheet" type="text/css" href="css/lab6.css">
+	</head>
 
-</body>
+	<body>
+		<div id="content">
+		<img id="carpic" src="img/carpic.jpg">
+		<h1>Lab 6: Arrays and Objects</h1>
+		<p>The main idea for this lab is to experiment with JavaScript arrays and objects.</p>
+
+		<h2>Challenges</h2>
+		<p>I had trouble with console.log(“My main ride: ” + myMainRide). It kept saying [object, object]
+			but then I tried console.log(“My main ride: ”, myMainRide) and it worked.</p>
+
+		<h2>Results</h2>
+		<p>Here is the program execution:</p>
+
+		<div id = "output">
+	 		<h3>Script Output</h3>
+	    <script src="js/lab6.js"></script>
+	  </div>
+	</div>
+	</body>
 </html>
