--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 		<li><a href="lab4/index.html">Lab 4: Pseudocoding and Problem-solving</a></li>
 		<li><a href="lab5/index.html">Lab 5: Data Types and Variables</a></li>
 		<li><a href="lab6/index.html">Lab 6: Arrays and Objects</a></li>
+		<li><a href="lab7/indesx.html">Lab 7: Functions</a><li>
+		<li><a href="lab8/indesx.html">Lab 8: Anon Functions and CallbacksAssignment</a><li>
+		<li><a href="lab9/indesx.html">Lab 9: JavaScript for the Web</a><li>
+		<li><a href="lab10/indesx.html">Lab 10: JavaScript Events and Forms</a><li>		
 		</div>
 
 	</body>
