--- a/lab7/index.html
+++ b/lab7/index.html
@@ -13,7 +13,7 @@
     <p>The main idea for this lab is to write functions that take user input and manipulate a string</p>
 
     <h2>Challenges</h2>
-    <p></p>
+    <p>I could not get this lab to upload on to github.</p>
 
     <h2>Results</h2>
     <p>Here is the program execution:</p>
