updated lab 7 html and css

--- a/lab7/index.html
+++ b/lab7/index.html
@@ -13,7 +13,9 @@
     <p>The main idea for this lab is to write functions that take user input and manipulate a string</p>
 
     <h2>Challenges</h2>
-    <p>I could not get this lab to upload on to github.</p>
+    <p>This lab was harder than any of the other labs. The example from the instructions really helped.
+    Also, when I was done with this lab, I could not get it to upload on to github. After a few tries I finally
+    was able to see it on my browser.</p>
 
     <h2>Results</h2>
     <p>Here is the program execution:</p>
