--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		</div>
 
 		<div id="labs">
+		<h2>Labs</h2>
 		<li><a href="lab2/helloworld.html">Lab 2: First HTML</a></li>
 		<li><a href="lab3/index.html">Lab 3: File Structure and File Transfer</a></li>
 		<li><a href="lab4/index.html">Lab 4: Pseudocoding and Problem-solving</a></li>
