--- a/lab10/index.html
+++ b/lab10/index.html
@@ -14,7 +14,7 @@
       <p>The main idea for this lab is to experiment with writing functions that take user input.</p>
 
       <h2>Challenges</h2>
-      <p>For this lab, I also was very confused at first. I spent a while going back understand
+      <p>For this lab, I also was very confused at first. I spent a while going back and
         looking at the lecture slides and looking online to understand how events and forms work.</p>
 
       <h2>Results</h2>
