--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 		<li><a href="lab9/index.html">Lab 9: JavaScript for the Web</a></li>
 		<li><a href="lab10/index.html">Lab 10: JavaScript Events and Forms</a></li>
 		<li><a href="lab11/index.html">Lab 11: Conditionals</a></li>
-		<li><a href="lab12/index.html">Lab 12: </a></li>
-		<li><a href="lab13/index.html">Lab 13: </a></li>
-		<li><a href="lab14/index.html">Lab 14: </a></li>
-		<li><a href="lab15/index.html">Lab 15: </a></li>
-		<li><a href="lab16/index.html">Lab 16: </a></li>
-		<li><a href="lab17/index.html">Lab 17: </a></li>
-		<li><a href="lab18/index.html">Lab 18: </a></li>
-		<li><a href="lab19/index.html">Lab 19: </a></li>
-		<li><a href="lab20/index.html">Lab 20: </a></li>
-		<li><a href="lab21/index.html">Lab 21: </a></li>
+		<li><a href="lab12/index.html">Lab 12: Loops</a></li>
+		<li><a href="lab13/index.html">Lab 13: Basic Debugging</a></li>
+		<li><a href="lab14/index.html">Lab 14: Javascript Classes and Objects</a></li>
+		<li><a href="lab15/index.html">Lab 15: Object-Oriented Design</a></li>
+		<li><a href="lab16/index.html">Lab 16: Libraries & Intro to jQuery</a></li>
+		<li><a href="lab17/index.html">Lab 17: Advanced jQuery</a></li>
+		<li><a href="lab18/index.html">Lab 18: Libraries and Frameworks 1</a></li>
+		<li><a href="lab19/index.html">Lab 19: AJAX</a></li>
+		<li><a href="lab20/index.html">Lab 20: JSON and APIs</a></li>
+		<li><a href="lab21/index.html">Lab 21: Git and Github</a></li>
 		</div>
 
 	</body>
