--- a/index.html
+++ b/index.html
@@ -2,15 +2,27 @@
 <html>
 
 	<head>
-		<title>Welcome</title>
+		<title>Ayline's CST252 ♡</title>
 		<link rel="stylesheet" type="text/css" href="css/site.css">
 	</head>
 
 	<body>
 		<div id="content">
-		<h1>Ayline Castrejon</h1>
+		<h1>♥ Welcome to Ayline Castrejon's CST252 Portfolio ♥</h1>
 		<img id="myself" src="images/myself.png" alt="myself">
-		<p>My name is Ayline Castrejon and my major is Communication Design with a concentration in Visual Design. This is my first semester as a transfer at CSUMB. I enjoy painting, traveling, watching movies and spending time with family. </p>
+
+			<div id="aboutMe">
+				<br>
+				<p>Hello, my name is Ayline Castrejon and I'm from Watsonville, CA. My major
+					is Communication Design with a concentration in Visual Design and this is
+					my first semester as a transfer at CSUMB. When I am not in school, I enjoy
+					painting, traveling, watching movies and spending time with family. I am
+					currently familar with HTML and CSS, but I am excited to learn JavaScript
+					in this class.</p>
+
+				<p>Click the links below to view my labs!</p>
+			</div>
+
 		</div>
 
 		<div id="labs">
