--- a/lab10/index.html
+++ b/lab10/index.html
@@ -9,6 +9,14 @@
   </head>
 
   <body>
+    <div id="navcontainer">
+      <ul>
+        <li><a href="../lab9/index.html">←Lab 9</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="lab11/index.html">Lab 11→</a></li>
+      </ul>
+    </div>
+
     <div id="content">
       <h1>Lab 10: JavaScript Events and Forms</h1>
       <p>The main idea for this lab is to experiment with writing functions that take user input.</p>
@@ -32,5 +40,6 @@
       <a href = "js/lab10.js">JavaScript Source</a>
 
     </div>
+
   </body>
 <html>
