--- a/lab10/index.html
+++ b/lab10/index.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="../lab9/index.html">←Lab 9</a></li>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="lab11/index.html">Lab 11→</a></li>
+        <li><a href="../lab11/index.html">Lab 11→</a></li>
       </ul>
     </div>
 
