--- a/lab9/index.html
+++ b/lab9/index.html
@@ -13,10 +13,10 @@
       <ul>
         <li><a href="../lab8/index.html">←Lab 8</a></li>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="lab10/index.html">Lab 10→</a></li>
+        <li><a href="../lab10/index.html">Lab 10→</a></li>
       </ul>
     </div>
-    
+
     <div id="content">
     <h1>Lab 9: JavaScript for the Web</h1>
     <p>The main idea for this lab is to experiment with modifying the DOM.</p>
