--- a/lab8/index.html
+++ b/lab8/index.html
@@ -9,6 +9,14 @@
   </head>
 
   <body>
+    <div id="navcontainer">
+      <ul>
+        <li><a href="../lab7/index.html">←Lab 7</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../lab9/index.html">Lab 9→</a></li>
+      </ul>
+    </div>
+
     <div id="content">
     <h1>Lab 8: Anon Functions and Callbacks</h1>
     <p>The main idea for this lab is to experiment with anonymous functions and
