--- a/lab7/index.html
+++ b/lab7/index.html
@@ -8,6 +8,14 @@
   </head>
 
   <body>
+    <div id="navcontainer">
+      <ul>
+        <li><a href="../lab6/index.html">←Lab 6</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../lab8/index.html">Lab 8→</a></li>
+      </ul>
+    </div>
+
     <div id="content">
     <h1>Lab 7: Functions</h1>
     <p>The main idea for this lab is to write functions that take user input and manipulate a string</p>
