--- a/lab6/index.html
+++ b/lab6/index.html
@@ -7,6 +7,14 @@
 	</head>
 
 	<body>
+		<div id="navcontainer">
+      <ul>
+        <li><a href="../lab5/index.html">←Lab 5</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../lab7/index.html">Lab 7→</a></li>
+      </ul>
+    </div>
+
 		<div id="content">
 		<img id="carpic" src="img/carpic.jpg">
 		<h1>Lab 6: Arrays and Objects</h1>
