--- a/lab5/index.html
+++ b/lab5/index.html
@@ -8,6 +8,14 @@
 	</head>
 
 	<body>
+		<div id="navcontainer">
+      <ul>
+        <li><a href="../lab4/index.html">←Lab 4</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../lab6/index.html">Lab 6→</a></li>
+      </ul>
+    </div>
+
 		<div id="content">
 		<img id="carpic" src="img/carpic.jpg">
 		<h1>Lab 5: Data Types and Variables</h1>
