--- a/lab4/index.html
+++ b/lab4/index.html
@@ -6,6 +6,14 @@
 	</head>
 
 	<body>
+		<div id="navcontainer">
+      <ul>
+        <li><a href="../lab3/index.html">←Lab 3</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../lab5/index.html">Lab 5→</a></li>
+      </ul>
+    </div>
+
 		<div id="content">
 		<h1>Lab 4: Pseudocoding and Problem-solving</h1>
 		<p>For this lab, the main idea is to get in the habit of pseudocoding before starting to code. We created pseudocode for an everyday task and for a computer task.</p>
