--- a/lab3/index.html
+++ b/lab3/index.html
@@ -7,6 +7,13 @@
 	</head>
 
 	<body>
+		<div id="navcontainer">
+      <ul>
+        <li><a href="../lab2/index.html">←Lab 2</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../lab4/index.html">Lab 4→</a></li>
+      </ul>
+    </div>
 		<div id="content">
 		<h1>Lab 3: File Structures</h1>
 		<p>For this lab, we had to create a local file structure and add index.html files.</p>
