--- a/lab2/helloworld.html
+++ b/lab2/helloworld.html
@@ -6,6 +6,13 @@
 	</head>
 
 	<body>
+		<div id="navcontainer">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../lab3/index.html">Lab 3→</a></li>
+      </ul>
+    </div>
+
 		<div id="content">
 		<h1>Hello World</h1>
 		<p>My name is Ayline Castrejon and my major is Communication Design with a concentration in Visual Design. This is my first semester as a transfer at CSUMB. I enjoy painting, traveling, watching movies and spending time with family. </p>
