--- a/lab8/index.html
+++ b/lab8/index.html
@@ -33,9 +33,10 @@
       <p>Original array: [12, 9, 5, 34, 98, 2, 56, 7]</p>
       <p>Adding 10 to array: [22, 19, 15, 44, 108, 12, 66, 17]</p>
       <p>Multiplying 10 to array: [120, 90, 50, 340, 980, 20, 560, 70]</p>
-
     </div>
 
+    <a href = "js/lab10.js">JavaScript Source</a>
+    
     </div>
     </body>
   </html>
