--- a/lab7/index.html
+++ b/lab7/index.html
@@ -33,6 +33,8 @@
 	    <script src="js/lab7.js"></script>
 	  </div>
 
+    <a href = "js/lab7.js">JavaScript Source</a>
+
   </div>
   </body>
 </html>
