--- a/lab6/index.html
+++ b/lab6/index.html
@@ -31,6 +31,9 @@
 	 		<h3>Script Output</h3>
 	    <script src="js/lab6.js"></script>
 	  </div>
+
+		<a href = "js/lab6.js">JavaScript Source</a>
+
 	</div>
 	</body>
 </html>
