--- a/lab3/index.html
+++ b/lab3/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="navcontainer">
       <ul>
-        <li><a href="../lab2/index.html">←Lab 2</a></li>
+        <li><a href="../lab2/helloworld.html">←Lab 2</a></li>
         <li><a href="../index.html">Home</a></li>
         <li><a href="../lab4/index.html">Lab 4→</a></li>
       </ul>
