--- a/lab12/index.html
+++ b/lab12/index.html
@@ -19,17 +19,15 @@
 
     <div id="content">
       <h1>Lab 12: Loops</h1>
-      <p>The main idea for this lab is to .</p>
+      <p>The main idea for this lab is to experiment with loops.</p>
 
       <h2>Challenges</h2>
-      <p></p>
+      <p>I was able to get the loop to work, but I could not figure out how to add the function.</p>
 
       <h2>Results</h2>
       <p>Here are the results:</p>
 
-      <div>
-        <div id="output">  </div>
-      </div>
+      <div id="output">  </div>
 
       <a href = "js/lab12.js">JavaScript Source</a>
 
