--- a/lab11/index.html
+++ b/lab11/index.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="../lab10/index.html">←Lab 10</a></li>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="lab12/index.html">Lab 12→</a></li>
+        <li><a href="../lab12/index.html">Lab 12→</a></li>
       </ul>
     </div>
 
