--- a/lab13/index.html
+++ b/lab13/index.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="../lab12/index.html">←Lab 12</a></li>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="lab14/index.html">Lab 14→</a></li>
+        <li><a href="../lab14/index.html">Lab 14→</a></li>
       </ul>
     </div>
 
@@ -23,10 +23,13 @@
       <h2>Challenges</h2>
       <p></p>
 
-      <h2>Results</h2>
+      <h2>Results (Debugging)</h2>
       <p>Here are the results:</p>
 
-      <div id="output">  </div>
+      <div id="output">
+        <img id="lab5pic" src="img/lab5codess.png">
+        <img id="lab5pic" src="img/lab5ss.png">
+      </div>
 
     </div>
 
