--- a/lab13/index.html
+++ b/lab13/index.html
@@ -21,14 +21,18 @@
       <p>The main idea for this lab is to use my debugging knowledge to fix old assignments.</p>
 
       <h2>Challenges</h2>
-      <p></p>
+      <p>I did not have any challenges for this lab.</p>
 
       <h2>Results (Debugging)</h2>
       <p>Here are the results:</p>
 
       <div id="output">
-        <img id="lab5pic" src="img/lab5codess.png">
-        <img id="lab5pic" src="img/lab5ss.png">
+        <p><em>Lab 5:</em> The picture was not showing up on this page and I did not know why,
+        but it was because I moved the picture to lab 6 instead of copying it. So all I <head>
+          to do is add the picture to my images folder for lab 5.
+        </head></p>
+        <img src="img/lab5codess.png">
+        <img src="img/lab5ss.png">
       </div>
 
     </div>
