--- a/lab12/index.html
+++ b/lab12/index.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="../lab11/index.html">←Lab 11</a></li>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="lab13/index.html">Lab 13→</a></li>
+        <li><a href="../lab13/index.html">Lab 13→</a></li>
       </ul>
     </div>
 
