--- a/lab19/index.html
+++ b/lab19/index.html
@@ -23,7 +23,8 @@
        <p>The main idea for this lab is to experiment with jQuery and AJAX.</p>
 
        <h2>Challenges</h2>
-       <p>It was difficult trying to figure out how to use endpoint for the API.</p>
+       <p>It was difficult trying to figure out how to use endpoint for the API. Everytime I clicked
+       the button, it outputs "undefined".</p>
 
        <h2>Results</h2>
        <p>Here are the results:</p>
